Revision history for XML-Grammar-Fiction.

    * Add more links to the XML::Grammar::Fiction's perldoc.
    * Convert from Mouse to Moo, MooX and "use MooX 'late'".

0.9.3       Tue 31 Jul 09:22:01 IDT 2012
    * Add an explicit version of 0.0301 to File::Find::Object::Rule .
        - With lower versions tests fail.
        - Thanks to Slaven Rezic for the report and investigation.

0.9.2       Sat 28 Jul 11:27:22 IDT 2012
    * Add List::MoreUtils to the dependencies.
        - Some build failures at:
            - http://www.cpantesters.org/cpan/report/add74ed0-d84a-11e1-9066-3d54fb7543f5

0.9.1       Fri 27 Jul 21:40:10 IDT 2012
    * Update the link to the repository in META.yml/META.json.

0.9.0       Fri 27 Jul 09:20:42 IDT 2012
    * Add t/style-trailing-space.t to check for trailing space.
        - Got rid of trailing space.
        - TODO: extract into a CPAN module.
    * Convert from "use Moose;" to "use Mouse;":
        - it made the test suite run faster.
        - TODO: test with https://metacpan.org/module/Moo .

0.8.1       Sat Jun  9 23:07:51 IDT 2012
    * Add t/base/line-iterator-unit.t to provide unit-tests for
        XML::Grammar::FictionBase::FromProto::Parser::LineIterator .
    * Add "use autodie" to the modules with open calls.

0.8.0       Wed Jun  8 19:04:57 IDT 2011
    * <blockquote> now supports xml:id and xml:lang.
    * Fiction-Text: a plus sign ( + ) at the starting line of the paragraph
    now indicates that the following tag is a style tag.
    * lib/XML/Grammar/Fiction.pm - add a comprehensive example to the POD
    itself.
    * Consolidated the lib/XML/Grammar/Fiction.pm 's todo into the C<TODO>
    file.
    * lib/XML/Grammar/Screenplay.pm - add an example in the code.

0.7.0       Wed May 25 12:47:13 IDT 2011
    * Add support for the lang="..." attribute of <body> in Fiction-Text which
    would be translated to <body xml:lang=".."> attribute in Fiction-XML (and
    eventually to DocBook 5/XML).